# winback

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/superpowers/specs/: 2026-07-01-incremental-backup-ledger-design.md
src/winback/: __init__.py  backup.py  cli.py  copier.py  doctor.py  ledger.py  models.py  paths.py  planner.py  reports.py  restore.py  validate.py
tests/: test_backup_restore.py  test_cli.py  test_doctor.py  test_ledger.py  test_paths.py  test_planner.py
