[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winback"
version = "0.4.1"
description = "Curated Windows before-wipe backup and restore CLI focused on durable user data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Soulwax" }
]
keywords = ["windows", "backup", "restore", "appdata", "firefox", "chrome", "powershell"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Recovery Tools",
]
dependencies = []

[project.scripts]
winback = "winback.cli:main"

[project.optional-dependencies]
build = ["build>=1.2", "twine>=5"]
dev = [
  "black>=24.8",
  "build>=1.2",
  "pylint>=3.2",
  "pytest>=8.3",
  "twine>=5",
]
test = ["pytest>=8.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
winback = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pylint.main]
py-version = "3.10"
jobs = 0
recursive = true

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-locals",
  "too-many-branches",
  "too-many-statements",
  "too-many-return-statements",
  "too-many-positional-arguments",
  "too-many-instance-attributes",
  "duplicate-code",
  "broad-exception-caught",
  "import-outside-toplevel",
]
